--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -12,3 +12,5 @@ pretty_env_logger = "0.4"
 tokio = { version =  "1.28", features = ["full"] }
 sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
 deepl = "0.4.1"
+regex = "1.8.4"
+lazy_static = "1.4.0"
