--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-teloxide = { version = "0.12", features = ["macros"] }
-log = "0.4"
-pretty_env_logger = "0.4"
-tokio = { version =  "1.28", features = ["full"] }
-sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
 #deepl = { git = "https://github.com/ValuedMammal/deepl-rs.git" }
 deepl = "0.4.2"
-regex = "1.8.4"
+dotenv = "0.15.0"
 lazy_static = "1.4.0"
+log = "0.4"
+pretty_env_logger = "0.4"
+regex = "1.8.4"
+sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
+teloxide = { version = "0.12", features = ["macros"] }
+tokio = { version =  "1.28", features = ["full"] }
