--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -6,8 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#deepl = { git = "https://github.com/ValuedMammal/deepl-rs.git" }
-deepl = "0.4.2"
 dotenv = "0.15.0"
 lazy_static = "1.4.0"
 log = "0.4"
@@ -16,3 +14,8 @@ regex = "1.8.4"
 sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
 teloxide = { version = "0.12", features = ["macros"] }
 tokio = { version =  "1.28", features = ["full"] }
+
+[dependencies.deepl]
+version = "0.4.3"
+#git = "https://github.com/ValuedMammal/deepl-rs.git"
+#path = "../../../crates/deepl-rs"
